--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua </li>
+         <h1>Esta es una modificacion de mi amigo imaginario</h1>
      </ul>
 </body>
 </html>
